[package]

name = "osproto"
description = "Protocol structures for OpenStack API (Obsolete)"
version = "0.2.2"
authors = ["Dmitry Tantsur <dtantsur@protonmail.com>"]
homepage = "https://github.com/dtantsur/rust-osproto"
repository = "https://github.com/dtantsur/rust-osproto"
documentation = "https://docs.rs/osproto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["api", "cloud", "openstack"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]

chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = { version = "^2.1", features = ["serde"] }

[lib]

name = "osproto"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "dtantsur/rust-osproto" }
